<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/black"
        android:elevation="15dp"
        android:padding="15dp"
        android:text="@string/accountDescription"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationY="-80dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:translationY="-80dp"
            android:gravity="center"
            android:text="@string/id_da_conta"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15sp"/>


        <EditText
            android:hint="@string/id"
            android:id="@+id/accountID"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:translationY="-70dp"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/searchAccount"
            android:text="@string/procurar"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/black_shape"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:translationY="-65dp"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:translationY="-40dp"
        android:text="@string/tipo_de_conta"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/tipoDeContaLayout"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:translationY="-30dp"
        android:orientation="vertical"
        android:background="@drawable/simpleborder">

        <TextView
            android:id="@+id/tipoDeConta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/accountType"
            />
    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:translationY="-15dp"
        android:text="@string/accounTitular"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/titularLayout"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:translationY="-5dp"
        android:orientation="vertical"
        android:background="@drawable/simpleborder">

        <TextView
            android:id="@+id/titular1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/accountTitular1" />
    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:translationY="10dp"
        android:text="@string/accountIban"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/ibanLayout"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:translationY="20dp"
        android:orientation="vertical"
        android:background="@drawable/simpleborder">

        <TextView
            android:id="@+id/iban"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/iban" />
    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:translationY="40dp"
        android:text="@string/accountNib"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/nibLayout"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:translationY="50dp"
        android:orientation="vertical"
        android:background="@drawable/simpleborder">

        <TextView
            android:id="@id/nib"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/AccountNib" />
    </LinearLayout>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:translationY="70dp"
        android:text="@string/accountSwift"
        android:gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="15sp"/>


    <LinearLayout
        android:id="@+id/swiftLayout"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:translationY="80dp"
        android:orientation="vertical"
        android:background="@drawable/simpleborder">

        <TextView
            android:id="@id/swift"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/swift" />
    </LinearLayout>
</LinearLayout>