<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/paymentIcon"
        android:layout_width="139dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:translationY="10dp"
        app:srcCompat="@drawable/payment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:layout_margin="30dp"
        android:background="@drawable/login_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:translationY="-2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/black"
            android:elevation="15dp"
            android:padding="15dp"
            android:text="@string/payment"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:translationY="-20dp" />

        <EditText
            android:id="@+id/paymentID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/id"
            android:importantForAutofill="no"
            android:inputType="number"
            android:translationY="-25dp" />

        <EditText
            android:id="@+id/paymentAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/paymentAccount"
            android:importantForAutofill="no"
            android:inputType="number"
            android:translationY="-15dp" />

        <EditText
            android:id="@+id/paymentReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/paymentReference"
            android:importantForAutofill="no"
            android:inputType="text"
            android:translationY="-5dp" />

        <EditText
            android:id="@+id/paymentCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/paymentCode"
            android:importantForAutofill="no"
            android:inputType="text"
            android:translationY="5dp" />

        <EditText
            android:id="@+id/paymentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/paymentAmount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:translationY="65dp" />

        <EditText
            android:id="@+id/paymentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/paymentDate"
            android:importantForAutofill="no"
            android:inputType="date"
            android:translationY="-30dp" />

        <Button
            android:id="@+id/paymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/black_shape"
            android:text="@string/pay"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:translationY="20dp" />

    </LinearLayout>
</LinearLayout>