<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".source.MainActivity">
    <!--we create background shape-->

    <ImageView
        android:id="@+id/moneyIncLogo"
        android:layout_width="162dp"
        android:layout_height="118dp"
        android:layout_gravity="center"
        android:contentDescription="@string/money_inc_logo"
        android:translationY="15dp"
        app:srcCompat="@drawable/credit_card" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="30dp"
        android:background="@drawable/login_shape"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp"
        android:translationY="-2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:translationY="-40dp"
            android:background="@color/black"
            android:elevation="15dp"
            android:padding="15dp"
            android:text="@string/createCard"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            tools:targetApi="LOLLIPOP" />

        <EditText
            android:hint="@string/cardAccount"
            android:id="@+id/cardAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number"
            android:translationY="-50dp"
            android:importantForAutofill="no" />

        <EditText
            android:hint="@string/cardUser"
            android:id="@+id/cardUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="number"
            android:translationY="-40dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/cardName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/cardRegisteredName"
            android:inputType="textPersonName"
            android:translationY="-25dp"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/cardNumber"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:translationY="-10dp" />

        <EditText
            android:id="@+id/cardValidity"
            android:hint="@string/cardValidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="5dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/cardCVC"
            android:hint="@string/cardCVC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:translationY="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/createCardButton"
            android:text="@string/createCard"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:background="@drawable/black_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationY="25dp"/>
    </LinearLayout>
</LinearLayout>