<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".source.MainActivity">
    <!--we create background shape-->
    <ImageView
        android:id="@+id/moneyIncLogo"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        app:srcCompat="@drawable/money_inc_logo"
        android:translationY="-60dp"
        android:contentDescription="@string/money_inc_logo" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:layout_margin="30dp"
        android:background="@drawable/login_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationY="-45dp">
        <TextView
            android:text="@string/login_page"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:background="@color/black"
            android:elevation="15dp"
            tools:targetApi="LOLLIPOP"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:background="@color/blue"
            android:hint="@string/utilizador"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codigoDeAcesso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:endIconMode="password_toggle"
            android:background="@color/blue"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"

                android:ems="10"
                android:maxLines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/loginBtn"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:background="@drawable/login_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:background="@drawable/login_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>